@@ -38,7 +38,7 @@ if($_POST['action']!="delete") {
 	if($_POST['app_security']!="user") {
 	if(!($_POST['app_permissions']==0 || $_POST['app_permissions']==1 || $_POST['app_permissions'] ==2 || $_POST['app_permissions'] ==3 ))	{ $error[] = "Invalid permissions"; }
 	}
-	# locak check
+	# lock check
 	if($_POST['app_lock']=="1") {
     	if(!is_numeric($_POST['app_lock_wait']))                                                            { $error[] = "Invalid wait value"; }
     	elseif ($_POST['app_lock_wait']<1)                                                                  { $error[] = "Invalid wait value"; }
@@ -58,11 +58,11 @@ else {
 					"app_security"=>@$_POST['app_security'],
 					"app_lock"=>@$_POST['app_lock'],
 					"app_lock_wait"=>@$_POST['app_lock_wait'],
+					"app_nest_custom_fields"=>@$_POST['app_nest_custom_fields'],
+					"app_show_links"=>@$_POST['app_show_links'],
 					"app_comment"=>@$_POST['app_comment']);
 
 	# execute
 	if(!$Admin->object_modify("api", $_POST['action'], "id", $values)) 	{ $Result->show("danger",  _("API $_POST[action] error"), true); }
 	else 																{ $Result->show("success", _("API $_POST[action] success"), true); }
 }
-
-?>
